tests/paczka1/fuzzy1/51297826.err
Error in line 7: A659 S856 21,6
Error in line 10: A659 A529 93,3
Error in line 12: A659 A659 66,4
Error in line 18: xf4c A659 74,1
Error in line 21: xf4c S856 71,23
Error in line 19: xf4c A876 82,0
Error in line 23: 5FDXTRbO S856 96,3
Error in line 13: 7jSX A529 2,3
Error in line 34: 5FDXTRbO A529 42,6
